Updated Quick Statistics

--- a/simple/index.html
+++ b/simple/index.html
@@ -67,21 +67,21 @@
         <div class="col-md-3">
           <a
             href="#"
-            class="btn btn-primary btn-block"
+            class="btn btn-success btn-block"
             data-toggle="modal"
             data-target="#addPostModal"
           >
-            <i class="fas fa-plus"></i> Add Post
+            <i class="fas fa-plus"></i> Add Positive
           </a>
         </div>
         <div class="col-md-3">
           <a
             href="#"
-            class="btn btn-success btn-block"
+            class="btn btn-danger btn-block"
             data-toggle="modal"
             data-target="#addCategoryModal"
           >
-            <i class="fas fa-plus"></i> Add Category
+            <i class="fas fa-plus"></i> Add Negative
           </a>
         </div>
         <div class="col-md-3">
@@ -91,7 +91,7 @@
             data-toggle="modal"
             data-target="#addUserModal"
           >
-            <i class="fas fa-plus"></i> Add User
+            <i class="fas fa-plus"></i> Add Neutral
           </a>
         </div>
       </div>
@@ -119,14 +119,14 @@
         <div class="col-md-3">
           <div class="card text-center bg-primary text-white mb-3">
             <div class="card-body">
-              <h3>Posts</h3>
+              <h3>Positive</h3>
               <h4 class="display-4"><i class="fas fa-pencil-alt"></i> 6</h4>
               <a href="posts.html" class="btn btn-outline-light btn-sm">View</a>
             </div>
           </div>
           <div class="card text-center bg-success text-white mb-3">
             <div class="card-body">
-              <h3>Categories</h3>
+              <h3>Negative</h3>
               <h4 class="display-4"><i class="fas fa-folder"></i> 4</h4>
               <a href="categories.html" class="btn btn-outline-light btn-sm"
                 >View</a
@@ -135,7 +135,7 @@
           </div>
           <div class="card text-center bg-warning text-white mb-3">
             <div class="card-body">
-              <h3>Users</h3>
+              <h3>Neutral</h3>
               <h4 class="display-4"><i class="fas fa-users"></i> 4</h4>
               <a href="users.html" class="btn btn-outline-light btn-sm">View</a>
             </div>
