--- a/simple/index.html
+++ b/simple/index.html
@@ -120,14 +120,14 @@
           <div class="card text-center bg-primary text-white mb-3">
             <div class="card-body">
               <h3>Positive</h3>
-              <h4 class="display-4"><i class="fas fa-pencil-alt"></i> 6</h4>
+              <h4 class="display-4"><i class="fas fa-user-plus"></i> 6</h4>
               <a href="posts.html" class="btn btn-outline-light btn-sm">View</a>
             </div>
           </div>
           <div class="card text-center bg-success text-white mb-3">
             <div class="card-body">
               <h3>Negative</h3>
-              <h4 class="display-4"><i class="fas fa-folder"></i> 4</h4>
+              <h4 class="display-4"><i class="fas fa-user-minus"></i> 4</h4>
               <a href="categories.html" class="btn btn-outline-light btn-sm"
                 >View</a
               >
