--- a/simple/index.html
+++ b/simple/index.html
@@ -105,14 +105,49 @@
         <div class="col-md-9">
           <div class="card">
             <div class="card-header">
-              <h4>Latest Posts</h4>
+              <h4>Latest Habits</h4>
             </div>
             <div class="card-body">
-              <h1>Habit One</h1>
-              <h1>Habit Two</h1>
-              <h1>Habit Three</h1>
-              <h1>Habit Four</h1>
-              <h1>Habit Five</h1>
+              <div class="progress" height="height: 50px">
+                <div
+                  class="progress-bar bg-success"
+                  role="progressbar"
+                  style="width: 25%"
+                  aria-valuenow="25"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar bg-info"
+                  role="progressbar"
+                  style="width: 50%"
+                  aria-valuenow="50"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar bg-warning"
+                  role="progressbar"
+                  style="width: 75%"
+                  aria-valuenow="75"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar bg-danger"
+                  role="progressbar"
+                  style="width: 100%"
+                  aria-valuenow="100"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
             </div>
           </div>
         </div>
