--- a/simple/index.html
+++ b/simple/index.html
@@ -108,9 +108,9 @@
               <h4>Latest Habits</h4>
             </div>
             <div class="card-body">
-              <div class="progress" height="height: 50px">
+              <div class="progress mb-3" style="height: 50px;">
                 <div
-                  class="progress-bar bg-success"
+                  class="progress-bar progress-bar-striped bg-success"
                   role="progressbar"
                   style="width: 25%"
                   aria-valuenow="25"
@@ -118,9 +118,9 @@
                   aria-valuemax="100"
                 ></div>
               </div>
-              <div class="progress">
+              <div class="progress mb-3" style="height: 50px;">
                 <div
-                  class="progress-bar bg-info"
+                  class="progress-bar progress-bar-striped bg-info"
                   role="progressbar"
                   style="width: 50%"
                   aria-valuenow="50"
@@ -128,9 +128,9 @@
                   aria-valuemax="100"
                 ></div>
               </div>
-              <div class="progress">
+              <div class="progress mb-3" style="height: 50px;">
                 <div
-                  class="progress-bar bg-warning"
+                  class="progress-bar progress-bar-striped bg-warning"
                   role="progressbar"
                   style="width: 75%"
                   aria-valuenow="75"
@@ -138,7 +138,7 @@
                   aria-valuemax="100"
                 ></div>
               </div>
-              <div class="progress">
+              <div class="progress" style="height: 50px;">
                 <div
                   class="progress-bar bg-danger"
                   role="progressbar"
