--- a/simple/index.html
+++ b/simple/index.html
@@ -103,6 +103,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-9">
+          <!-- CALENDAR -->
           <table class="table table-bordered table-striped">
             <thead>
               <tr>
@@ -172,10 +173,7 @@
               </tr>
             </tbody>
           </table>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-9">
+          <!-- TRACKER -->
           <div class="card">
             <div class="card-header">
               <h4>Latest Habits</h4>
