--- a/simple/index.html
+++ b/simple/index.html
@@ -22,7 +22,14 @@
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
     <div class="container">
-      <!-- <a href="index.html" class="navbar-brand">Habit Tracker</a> -->
+      <a href="index.html" class="navbar-brand">Habit Tracker</a>
+      <button
+        class="navbar-toggler"
+        data-toggle="collapse"
+        data-target="#navbarCollapse"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div id="navbarCollapse" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item dropdown mr-3">
@@ -54,7 +61,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1><i class="fas fa-tasks"></i> Habit Tracker</h1>
+          <h1><i class="fas fa-tasks"></i> Journal</h1>
         </div>
       </div>
     </div>
