--- a/simple/index.html
+++ b/simple/index.html
@@ -31,6 +31,18 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div id="navbarCollapse" class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item px-2">
+            <a href="journal.html" class="nav-link active">Journal</a>
+          </li>
+          <li class="nav-item px-2">
+            <a href="goals.html" class="nav-link">Goals</a>
+          </li>
+          <li class="nav-item px-2">
+            <a href="progress.html" class="nav-link">Progress</a>
+          </li>
+
+        </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item dropdown mr-3">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
