--- a/simple/progress.html
+++ b/simple/progress.html
@@ -72,14 +72,14 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1><i class="fas fa-tasks"></i> Journal</h1>
+          <h1><i class="fas fa-tasks"></i> Progress</h1>
         </div>
       </div>
     </div>
   </header>
 
   <section>
-    <h1>Proress</h1>
+    <h1>Progress</h1>
   </section>
 
   <body>
