--- a/simple/goals.html
+++ b/simple/goals.html
@@ -72,7 +72,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1><i class="fas fa-tasks"></i> Goals</h1>
+          <h1><i class="fas fa-list-ul"></i> Goals</h1>
         </div>
       </div>
     </div>
