--- a/simple/goals.html
+++ b/simple/goals.html
@@ -33,7 +33,7 @@
       <div id="navbarCollapse" class="collapse navbar-collapse">
         <ul class="navbar-nav">
           <li class="nav-item px-2">
-            <a href="journal.html" class="nav-link active">Journal</a>
+            <a href="index.html" class="nav-link active">Journal</a>
           </li>
           <li class="nav-item px-2">
             <a href="goals.html" class="nav-link">Goals</a>
@@ -72,14 +72,18 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1><i class="fas fa-list-ul"></i> Goals</h1>
+          <h1><i class="fas fa-tasks"></i> Goals</h1>
         </div>
       </div>
     </div>
   </header>
 
   <section>
-    <h1>Goals</h1>
+    <div class="container">
+      <div class="row">
+        <h1>Goals</h1>
+      </div>
+    </div>
   </section>
 
   <body>
