--- a/simple/index.html
+++ b/simple/index.html
@@ -33,7 +33,7 @@
       <div id="navbarCollapse" class="collapse navbar-collapse">
         <ul class="navbar-nav">
           <li class="nav-item px-2">
-            <a href="journal.html" class="nav-link active">Journal</a>
+            <a href="index.html" class="nav-link active">Journal</a>
           </li>
           <li class="nav-item px-2">
             <a href="goals.html" class="nav-link">Goals</a>
@@ -72,7 +72,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1><i class="fas fa-tasks"></i> Journal</h1>
+          <h1><i class="fas fa-pencil-alt"></i> Journal</h1>
         </div>
       </div>
     </div>
